bugs on mobile

--- a/src/components/Admin/Trainings/TrainingDashboard.css
+++ b/src/components/Admin/Trainings/TrainingDashboard.css
@@ -34,4 +34,12 @@
         width: 100%;
         min-height: unset;
     }
+    .manageTrainingsComponentWrapper {
+        max-height: unset;
+        height: unset;
+        /* height: unset; */
+    }
+    .manageTrainingsWrapper, .editMembersContainer {
+        height: unset;
+    }
 }
